# chia-plotter

./: .gitignore  CMakeLists.txt  make_release.sh
include/: cxxopts.hpp
include/chia/: DiskSort.h  DiskSort.hpp  DiskTable.h  Thread.h  ThreadPool.h  bitfield.hpp  buffer.h  chia.h  copy.h  encoding.hpp  entries.h  phase1.h  phase1.hpp  phase2.h  phase2.hpp  phase3.h  phase3.hpp  phase4.h  phase4.hpp  settings.h  settings_0.h  settings_3.h  util.hpp
lib/FSE/lib/: fseU16.c  huf_compress.c
lib/FSE/programs/: bench.c  commandline.c  fullbench.c  fuzzer.c
src/: chia_plot.cpp
test/: check_phase_1.cpp  test_copy.cpp  test_disk_sort.cpp  test_phase_1.cpp  test_phase_2.cpp  test_phase_3.cpp  test_phase_4.cpp
test/chia_ref/: calculate_bucket.hpp  verifier.hpp
